--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.getkeepsafe.taptargetview:taptargetview:1.5.0'
     compile 'com.github.HotBitmapGG:RingProgressBar:V1.2.2'
 
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta2'
 }
